My IgFeed Proyect

--- a/index.html
+++ b/index.html
@@ -72,136 +72,147 @@
         </div>
     </nav>
 
-
+    <!-- Botones -->
     <ul class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
             <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane"
-                type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><i
-                    class="fa-solid fa-circle"></i></button>
+                type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">
+                <i class="fa fa-square"></i>
+            </button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
-                type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><i
-                    class="fa fa-square"></i></button>
+                type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">
+                <i class="fa fa-table"></i>
+            </button>
         </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
-            tabindex="0">
-            <div class="text-center">
-                <div class="row my-3">
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1422023439-64f1eaf518ace.jpg?crop=1xw:0.84375xh;center,top&resize=1200:*"
-                            alt="" srcset="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
-                            alt="" srcset="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
-                            alt="" srcset="">
-                    </div>
-                </div>
 
-                <div class="row my-3">
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1422023439-64f1eaf518ace.jpg?crop=1xw:0.84375xh;center,top&resize=1200:*"
-                            alt="" srcset="">
+        <!-- grilla -->
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
+                tabindex="0">
+                <div class="text-center">
+                    <div class="row my-3">
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1422023439-64f1eaf518ace.jpg?crop=1xw:0.84375xh;center,top&resize=1200:*"
+                                alt="" srcset="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
+                                alt="" srcset="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
+                                alt="" srcset="">
+                        </div>
                     </div>
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
-                            alt="" srcset="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
-                            alt="" srcset="">
-                    </div>
-                </div>
 
-                <div class="row my-3">
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1422023439-64f1eaf518ace.jpg?crop=1xw:0.84375xh;center,top&resize=1200:*"
-                            alt="" srcset="">
+                    <div class="row my-3">
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1422023439-64f1eaf518ace.jpg?crop=1xw:0.84375xh;center,top&resize=1200:*"
+                                alt="" srcset="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
+                                alt="" srcset="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
+                                alt="" srcset="">
+                        </div>
                     </div>
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
-                            alt="" srcset="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid"
-                            src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
-                            alt="" srcset="">
+
+                    <div class="row my-3">
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1422023439-64f1eaf518ace.jpg?crop=1xw:0.84375xh;center,top&resize=1200:*"
+                                alt="" srcset="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
+                                alt="" srcset="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid"
+                                src="https://estaticos-cdn.prensaiberica.es/clip/823f515c-8143-4044-8f13-85ea1ef58f3a_16-9-discover-aspect-ratio_default_0.jpg"
+                                alt="" srcset="">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- </div> -->
 
-        <!-- <section> -->
-        <div class="tab-pane fade container m-4 mx-auto d-block py-2" id="profile-tab-pane" role="tabpanel"
-            aria-labelledby="profile-tab" tabindex="0">
-            <div class="container-fluid">
-                <!-- <div class="row mx-0 my-3"> -->
-                    <div class="card col px-0" style="width: 40rem;">
-                        <div class="card-body d-flex justify-content-between">
-                            <h1>My Cute Baby!</h1>
-                            <span>08/26</span>
-                        </div>
-                        <img src="https://static.guiainfantil.com/media/40268/c/sudamina-granitos-en-los-bebes-por-el-calor-md.jpg"
-                            class="card-img-top mx-0" alt="...">
-                        <div class="card-body">
-                            <strong>204 Likes</strong>
-                            <p>this is an example of a very good photo that you can post on instagram</p>
+
+            <!-- <posts> -->
+            <br />
+            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col">
+                        <div class="card" style="width: 40rem;">
+                            <div class="card-body d-flex justify-content-between">
+                                <h1>My Cute Baby!</h1>
+                                <span>08/26</span>
+                            </div>
+                            <img src="https://static.guiainfantil.com/media/40268/c/sudamina-granitos-en-los-bebes-por-el-calor-md.jpg"
+                                class="card-img-top mx-0" alt="...">
+                            <div class="card-body">
+                                <strong>204 Likes</strong>
+                                <p>this is an example of a very good photo that you can post on instagram</p>
+                            </div>
                         </div>
                     </div>
-                <!-- </div> -->
-
-                <div class="row mx-0 my-5">
-                    <div class="card col px-0" style="width: 18rem;">
-                        <div class="card-body d-flex justify-content-between">
-                            <h1>My Cute Baby!</h1>
-                            <span>08/26</span>
-                        </div>
-                        <img src="https://static.guiainfantil.com/media/40268/c/sudamina-granitos-en-los-bebes-por-el-calor-md.jpg"
-                            class="card-img-top mx-0" alt="...">
-                        <div class="card-body">
-                            <strong>204 Likes</strong>
-                            <p>this is an example of a very good photo that you can post on instagram</p>
-                        </div>
-                    </div>
+                    <div class="col"></div>
                 </div>
-
-                <div class="row mx-0 my-5 ">
-                    <div class="card col px-0" style="width: 18rem;">
-                        <div class="card-body d-flex justify-content-between">
-                            <h1>My Cute Baby!</h1>
-                            <span>08/26</span>
-                        </div>
-                        <img src="https://static.guiainfantil.com/media/40268/c/sudamina-granitos-en-los-bebes-por-el-calor-md.jpg"
-                            class="card-img-top mx-0" alt="...">
-                        <div class="card-body">
-                            <strong>204 Likes</strong>
-                            <p>this is an example of a very good photo that you can post on instagram</p>
+                <br />
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col">
+                        <div class="card" style="width: 40rem;">
+                            <div class="card-body d-flex justify-content-between">
+                                <h1>My Cute Baby!</h1>
+                                <span>08/26</span>
+                            </div>
+                            <img src="https://static.guiainfantil.com/media/40268/c/sudamina-granitos-en-los-bebes-por-el-calor-md.jpg"
+                                class="card-img-top mx-0" alt="...">
+                            <div class="card-body">
+                                <strong>204 Likes</strong>
+                                <p>this is an example of a very good photo that you can post on instagram</p>
+                            </div>
                         </div>
                     </div>
+                    <div class="col"></div>
                 </div>
-
+                <br />
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col">
+                        <div class="card" style="width: 40rem;">
+                            <div class="card-body d-flex justify-content-between">
+                                <h1>My Cute Baby!</h1>
+                                <span>08/26</span>
+                            </div>
+                            <img src="https://static.guiainfantil.com/media/40268/c/sudamina-granitos-en-los-bebes-por-el-calor-md.jpg"
+                                class="card-img-top mx-0" alt="...">
+                            <div class="card-body">
+                                <strong>204 Likes</strong>
+                                <p>this is an example of a very good photo that you can post on instagram</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col"></div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- </section> -->
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
